--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -1,3 +1,13 @@
-<p>
-  product-details works!
-</p>
+<div class="container pt-5">
+  <div class="row" id="product-details">
+    <div class="col-md-4 hidden-md-down">
+      <img [src]="product.imageHref" alt="Product Image" />
+    </div>
+    <div class="col col-md-6">
+      <p class="lead">{{product.title}}</p>
+      <p>{{product.description}}</p>
+      <p>{{product.category}}</p>
+      <p><a [href]="product.url">{{product.url}}</a></p>
+    </div>
+  </div>
+</div>
