--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -1,13 +1,20 @@
 <div class="container pt-5">
   <div class="row" id="product-details">
-    <div class="col-md-4 hidden-md-down">
+    <div class="col-md-4 hidden-md-down align-self-center">
       <img [src]="product.imageHref" alt="Product Image" />
     </div>
-    <div class="col col-md-6">
+    <div class="col col-md-6 offset-md-2">
       <p class="lead">{{product.title}}</p>
-      <p>{{product.description}}</p>
-      <p>{{product.category}}</p>
+      <p class="text-muted">{{product.description}}</p>
       <p><a [href]="product.url">{{product.url}}</a></p>
+      <div class="row">
+        <div class="col-6 text-center">
+          <button class="btn btn-outline-info" (click)="goBack()">Back</button>
+        </div>
+        <div class="col-6 text-center">
+          <button class="btn btn-outline-info">Save as PDF</button>
+        </div>
+      </div>
     </div>
   </div>
 </div>
