--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -2,9 +2,9 @@
   <div class="row">
     <div class="col-lg-4 col-sm-6 product align-items-stretch" *ngFor="let product of products">
       <div class="card h-100">
+        <h4 class="card-header">{{product.title}}</h4>
         <img [src]="product.imageHref" alt="Product Image" class="card-img-top">
         <div class="card-block">
-          <h4 class="card-title">{{product.title}}</h4>
           <p class="card-text">{{product.description}}</p>
           <a [href]="product.url" class="card-link" target="_blank">{{product.url}}</a>
         </div>
@@ -16,5 +16,7 @@
   </div>
 </div>
 <div *ngIf="selectedProduct">
-  <app-product-details [product]="selectedProduct"></app-product-details>
+  <app-product-details
+    [product]="selectedProduct"
+    (goToDetail)="goToDetail()"></app-product-details>
 </div>
