--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -9,10 +9,10 @@
       <p><a [href]="product.url">{{product.url}}</a></p>
       <div class="row">
         <div class="col-6 text-center">
-          <button class="btn btn-outline-info" (click)="goBack()">Back</button>
+          <button class="btn btn-outline-info backBtn" (click)="goBack()">Back</button>
         </div>
         <div class="col-6 text-center">
-          <button class="btn btn-outline-info" (click)="saveAsPdf()">Save as PDF</button>
+          <button class="btn btn-outline-info saveBtn" (click)="saveAsPdf()">Save as PDF</button>
         </div>
       </div>
     </div>
